--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+    android:layout_height="fill_parent">
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="10dip" >
+        android:padding="10dip">
 
         <TextView
             android:layout_width="fill_parent"
@@ -37,7 +37,6 @@
             android:hint="Enter Servername/IP"
             android:inputType="text" />
 
-
         <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -52,32 +51,24 @@
             android:inputType="textPassword" />
 
         <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dip"
+            android:text="@string/pth" />
+
+        <EditText
+            android:id="@+id/loginURLpath"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:hint="Enter API URL "
+            android:inputType="text" />
+
+        <TextView
             android:id="@+id/login_error"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:padding="10dip"
             android:textColor="#e30000"
-            android:textStyle="bold" />
-
-        <Button
-            android:id="@+id/btnLogin"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dip"
-            android:background="#ff6347"
-            android:onClick="loginUser"
-            android:text="Login"
-            android:textColor="#fff" />
-
-        <Button
-            android:id="@+id/btnLinkToRegisterScreen"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="40dip"
-            android:background="@null"
-            android:onClick="navigatetoRegisterActivity"
-            android:text="Signup"
-            android:textColor="#228b22"
             android:textStyle="bold" />
 
         <TextView
@@ -87,6 +78,35 @@
             android:padding="10dip"
             android:textColor="#e30000"
             android:textStyle="bold" />
+
+        <Spinner
+            android:id="@+id/spinner1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:entries="@array/array_entries"
+            android:prompt="@string/array_prompt" />
+
+        <Button
+            android:id="@+id/btnLogin"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dip"
+            android:background="#ff6347"
+            android:onClick="loginUser"
+            android:text="Query Shopware"
+            android:textColor="#fff" />
+
+        <Button
+            android:id="@+id/btnLinkToRegisterScreen"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dip"
+            android:background="@null"
+            android:onClick="navigatetoSettingsActivity"
+            android:text="Settings"
+            android:textColor="#228b22"
+            android:textStyle="bold" />
+
 
     </LinearLayout>
 
